# courseinfo-api

./: .env.example  .gitignore  pyproject.toml
app/: api.py  db.py  main.py  models.py
app/core/: config.py  db.py
app/routers/: students.py
