[project]
name = "courseinfo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.40.0",
    "pymongo>=4.16.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = [
    "E", "F",     # Default Error & Pyflakes
    "RUF",        # Ruff-specific rules
    "W",          # pycodestyle warnings
    "C4",         # flake8-comprehensions
    "UP",         # pyupgrade
    "ARG001",     # unused arguments in functions
    "ANN",        # flake8-annotations (Strict type hinting)
    "UP",         # pyupgrade (Newest type syntax: e.g., int | None)
    "B",          # flake8-bugbear (Common logic errors)
    "I",          # isort (Import sorting)
    "FAST",       # FastAPI
    "ASYNC",       # flake8-async (crucial for FastAPI/Async SQLAlchemy)
]
ignore = [
    "ANN401"
]

[dependency-groups]
dev = [
    "pyrefly>=0.51.0",
    "ruff>=0.15.0",
]
